--- a/src/pages/my-events/my-events.html
+++ b/src/pages/my-events/my-events.html
@@ -15,41 +15,40 @@
 
 <ion-content padding>
 
-  <ion-segment [(ngModel)]="event_type" color="primary">
-    <ion-segment-button value="all">
+  <ion-segment [(ngModel)]="event_type" color="primary" (ionChange)="segmentChanged($event)">
+    <ion-segment-button value="friends">
       ALL
     </ion-segment-button>
-    <ion-segment-button value="going">
+    <ion-segment-button value="enemies">
       GOING
     </ion-segment-button>
-    <ion-segment-button value="saved">
+    <ion-segment-button value="enemies">
       SAVED
     </ion-segment-button>
-    <ion-segment-button value="past">
+    <ion-segment-button value="enemies">
       PAST
     </ion-segment-button>
   </ion-segment>
 
 
-  <div [ngSwitch]="event_type">
-    <ng-container *ngSwitchCase="'all'">
+  <!-- for each day there's a list -->
+  <ion-list *ngFor="let schedule of schedules">
+      <ion-list-header no-lines class="list_header"> {{schedule.date | date: 'fullDate'}} </ion-list-header>
+    
+      <!-- for each event happening in one day -->
+      <ion-item *ngFor="let event of schedule.events">
 
-      <ion-list *ngFor="let eventDate of dates">
-          <ion-list-header no-lines class="list_header"> {{eventDate | date: 'fullDate'}} </ion-list-header>
-        <ion-item>
-
+          <!-- for text info per event -->
           <ion-item no-lines>
-
-            <h2 class="event_title">Pizza at Pizza House, Join Me!</h2>
-            <p>11h ago</p>
-            <p>16:30, 1456 Main Street, Ann Arbor</p>
-
+            <h2 class="event_title">{{event.title}}</h2>
+            <!-- <p>11h ago</p> -->
+            <p>{{event.start_time | date: 'shortTime'}}, {{event.restaurant.location}}</p>
           </ion-item>
 
 
           <ion-item no-lines>
-
-            <ion-avatar item-start>
+            
+            <ion-avatar item-start><!-- will have *ngfor="let participantId of schedule.event.coming_people_ids" -->
               <img src="assets/imgs/avatar-ts-jessie.png" class="participant_img">
             </ion-avatar>
 
@@ -76,19 +75,12 @@
 
           </ion-item>
 
-        </ion-item>
-      </ion-list>
-    </ng-container>
 
-    <ng-container *ngSwitchCase="'going'">
-    </ng-container>
+      </ion-item>
 
-    <ng-container *ngSwitchCase="'saved'">
-    </ng-container>
 
-    <ng-container *ngSwitchCase="'past'">
-    </ng-container>
-  </div>
+
+  </ion-list>
 
 
 
@@ -100,6 +92,7 @@
       <ion-icon name="add"></ion-icon>
     </button>
   </ion-fab>
+
 
 </ion-content>
 
