--- a/src/pages/create-event/create-event.html
+++ b/src/pages/create-event/create-event.html
@@ -68,7 +68,7 @@
 
 
 
-    <button ion-item>
+    <button ion-item (click)="toInviteGroup()">
       Invite Friends
       <ion-badge item-end>0</ion-badge>
     </button>
