--- a/src/pages/message/message.html
+++ b/src/pages/message/message.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Notification</ion-title>
+    <ion-title>Message</ion-title>
   </ion-navbar>
 
 </ion-header>
