--- a/src/pages/invitegroup/invitegroup.html
+++ b/src/pages/invitegroup/invitegroup.html
@@ -14,10 +14,12 @@
 
 
 <ion-content padding>
-<ion-item-group *ngFor="let group of groups">
-  <ion-list radio-group [(ngModel)]="relationship">
+
+
+
+
+      <ion-item-group *ngFor="let group of groups">
         <ion-item no-padding (click)="jump()">
-        	  <ion-radio value="friends" ></ion-radio>
           <ion-thumbnail item-start>
             <div class="conversation-summary-avatar conversation-summary-avatar-group" data-number-of-thumbnails="4">
               <div class="conversation-summary-avatar-group-member-wrapper"><img src={{users[group.userIds[0]].img}} data-user-initial="J"></div>
@@ -34,6 +36,12 @@
           <p>You're not turning me into a Mashed Potato.</p>
           <ion-note item-end>5:47 am</ion-note>
         </ion-item>
-        </ion-list>
       </ion-item-group>
+
+
+
+
+
+
+  <button ion-button>Save Group</button>
 </ion-content>
