--- a/src/pages/invitegroup/invitegroup.html
+++ b/src/pages/invitegroup/invitegroup.html
@@ -15,11 +15,17 @@
 
 <ion-content padding>
 
-
+  <ion-item no-lines>
+    <button [disabled]="checkedRestaurantId === undefined" 
+     (click)="saveRestaurant()"
+     round ion-button color="primary" full>Save my Choice</button>
+  </ion-item>
 
 
       <ion-item-group *ngFor="let group of groups">
-        <ion-item no-padding (click)="jump()">
+        <ion-item no-padding (click)="jump()"  radio-group [(ngModel)]="checkedRestaurantId">
+          <ion-radio id="res-title" class="radio-btn" item-start color="primary" value="{{ group.groupId }}"></ion-radio>
+
           <ion-thumbnail item-start>
             <div class="conversation-summary-avatar conversation-summary-avatar-group" data-number-of-thumbnails="4">
               <div class="conversation-summary-avatar-group-member-wrapper"><img src={{users[group.userIds[0]].img}} data-user-initial="J"></div>
@@ -32,6 +38,7 @@
                   data-user-initial="B"></div>
             </div>
           </ion-thumbnail>
+           <p>{{group.groupId}}</p>
           <h2>{{users[group.userIds[0]].name}}, {{users[group.userIds[1]].name}}</h2>
           <p>You're not turning me into a Mashed Potato.</p>
           <ion-note item-end>5:47 am</ion-note>
@@ -40,8 +47,4 @@
 
 
 
-
-
-
-  <button ion-button>Save Group</button>
 </ion-content>
