--- a/src/pages/create-event/create-event.html
+++ b/src/pages/create-event/create-event.html
@@ -81,8 +81,9 @@
       <ion-card-content>
 
         <div class="description">
+          <h2>Group Selected</h2>
           
-          <p>My Group </p>
+          <p>Total People:{{checkedGroup.userIds.length}}</p>
 
         </div>
       </ion-card-content>
