pull groupName from firebase(fix bug)

--- a/src/pages/my-events/my-events.html
+++ b/src/pages/my-events/my-events.html
@@ -62,7 +62,7 @@
 
               <p class="moreNum">+5</p>
 
-              <button ion-button clear small class="eventCardButton" >
+              <button ion-button clear small class="eventCardButton" (click)="joinEvent(event)">
                   <ion-icon name="ice-cream-outline"></ion-icon>
                   <div>JOIN</div>
               </button>
