--- a/src/pages/invitegroup/invitegroup.html
+++ b/src/pages/invitegroup/invitegroup.html
@@ -23,9 +23,13 @@
 
 
       <ion-item-group *ngFor="let group of groups">
-        <ion-item no-padding (click)="jump()"  radio-group [(ngModel)]="checkedGroupId">
+        <ion-item no-padding   radio-group [(ngModel)]="checkedGroupId">
+
+            <ion-item >
+         
           <ion-radio id="res-title" class="radio-btn" item-start color="primary" value="{{ group.groupId }}"></ion-radio>
 
+        </ion-item >
           <ion-thumbnail item-start>
             <div class="conversation-summary-avatar conversation-summary-avatar-group" data-number-of-thumbnails="4">
               <div class="conversation-summary-avatar-group-member-wrapper"><img src={{users[group.userIds[0]].img}} data-user-initial="J"></div>
