--- a/src/pages/create-event/create-event.html
+++ b/src/pages/create-event/create-event.html
@@ -81,7 +81,7 @@
       <ion-card-content>
 
         <div class="description">
-          <h2>Group Selected</h2>
+          <h2>Group Selected:{{checkedGroup.groupName}} </h2>
           
           <p>Total People:{{checkedGroup.userIds.length}}</p>
 
