--- a/src/pages/user-profile/user-profile.html
+++ b/src/pages/user-profile/user-profile.html
@@ -14,41 +14,58 @@
 
 
 <ion-content padding>
-  <div class="user-details">
-    <ion-row class="user-main-data-row">
-      <ion-col>
-  		<ion-img class="user-image" width="120" height="120" src={{user.img}}> </ion-img>
-      </ion-col>
-      <ion-col no-padding>
-        <ion-row class="social-presence-row">
-          <ion-col width-50 class="social-presence-item">
-              <h2 class="social-presence-value">{{user.name}}</h2>
-              <h4 class="social-presence-title">{{user.company}}</h4>
-          </ion-col>
-        </ion-row>
-        <ion-row class="profile-action-row">
-          <ion-col no-padding>
-			<ion-item no-lines>
-			  <ion-label>Available</ion-label>
-			  <ion-toggle checked="false"></ion-toggle>
-			</ion-item>
-          </ion-col>
-        </ion-row>
-      </ion-col>
-    </ion-row>
-    <ion-row wrap class="user-bio-row">
-      <ion-col>
-      	<h4> Bio </h4>
-        <p class="user-description">
-          Ariel has a distinctive appearance, with her long, flowing, bright red hair, blue eyes, green mermaid tail and purple seashell bikini top. In the films and television series, she is the seventh-born daughter of King Triton and Queen Athena of an underwater kingdom of Merfolk called Atlantica.[4][5] She is often rebellious, and in the first film, she longs to be a part of the human world. She marries Prince Eric, whom she rescued from a shipwreck, and together they have a daughter, Melody.
-        </p>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-    	<ion-col>
-    		<button ion-button>Save Profile</button>
-    	</ion-col>
-    </ion-row>
-  </div>
+
+  <ion-item>
+<ion-row>
+      <ion-avatar >
+        <img src={{user.img}}>
+      </ion-avatar>
+
+       <button ion-button clear>Edit Profile</button>
+</ion-row>
+    </ion-item>
+
+
+  <ion-item>
+
+      <h2 >Full Name</h2>
+      <p >{{user.name}}</p>
+   
+
+    </ion-item>
+
+
+    <ion-item>
+
+      <h2 >Company</h2>
+      <p >{{user.company}}</p>
+   
+
+    </ion-item>
+
+
+
+   <ion-item>
+
+      <h2 >Location</h2>
+      <p >2353, Main Street, Ann Arbor, Michigan</p>
+   
+
+    </ion-item>
+
+
+
+
+
+  <ion-item>
+
+      <h2 >Bio </h2>
+      <p > Ariel has a distinctive appearance, with her long, flowing, bright red hair, blue eyes, green mermaid tail and purple seashell bikini top. In the films and television series, she is the seventh-born daughter of King Triton and Queen Athena of an underwater kingdom of Merfolk called Atlantica.</p>
+   
+
+  </ion-item>
+
+
+
 
 </ion-content>
