--- a/src/pages/user-profile/user-profile.html
+++ b/src/pages/user-profile/user-profile.html
@@ -15,10 +15,12 @@
 
 <ion-content padding>
 
+<ion-card>
+
   <ion-item>
 <ion-row>
       <ion-avatar >
-        <img src={{user.img}}>
+        <img src={{users[0].img}}>
       </ion-avatar>
 
        <button ion-button clear>Edit Profile</button>
@@ -29,7 +31,7 @@
   <ion-item>
 
       <h2 >Full Name</h2>
-      <p >{{user.name}}</p>
+      <p >{{users[0].name}}</p>
    
 
     </ion-item>
@@ -38,7 +40,7 @@
     <ion-item>
 
       <h2 >Company</h2>
-      <p >{{user.company}}</p>
+      <p >{{users[0].company}}</p>
    
 
     </ion-item>
@@ -60,12 +62,30 @@
   <ion-item>
 
       <h2 >Bio </h2>
-      <p > Ariel has a distinctive appearance, with her long, flowing, bright red hair, blue eyes, green mermaid tail and purple seashell bikini top. In the films and television series, she is the seventh-born daughter of King Triton and Queen Athena of an underwater kingdom of Merfolk called Atlantica.</p>
+      <p >{{users[0].bio}}</p>
    
 
   </ion-item>
 
+</ion-card>
 
+  <ion-card *ngIf="checkedGroup" class="inner-card">
+<!--       <ion-item>
+        <ion-label class="res-title"><b>{{ checkedGroup.GroupId }}</b></ion-label>
+      </ion-item>
+
+      <ion-card-content>
+
+        <div class="description">
+          <h2>Group Selected:{{checkedGroup.groupName}} </h2>
+          
+          <p>Total People:{{checkedGroup.userIds.length}}</p>
+
+        </div>
+      </ion-card-content> -->
+
+
+    </ion-card>
 
 
 </ion-content>
