change style of group page

--- a/src/pages/all-events/all-events.html
+++ b/src/pages/all-events/all-events.html
@@ -33,7 +33,7 @@
     <ion-card-content>
       <ion-card-title>
         {{ event.title }}
-        <!-- <ion-badge>{{ event.coming_people_ids.length }}</ion-badge> -->
+        <ion-badge>{{ event.coming_people_ids.length }}</ion-badge>
       </ion-card-title>
       <p>
         {{ event.description }}
