add feature 'accept invitation'

--- a/src/pages/message/message.html
+++ b/src/pages/message/message.html
@@ -35,7 +35,7 @@
 							</div>
 							<div *ngSwitchCase=4>
 								<p class="item-description">invited to join the event {{findEventTitle(message)}}</p>
-								<button ion-button round outline small (click)="send_request(message)">Join</button>
+								<button ion-button round outline small (click)="accept_invite(message)">Join</button>
 							</div>
 						</div>
 					<ion-note class="item-time" item-right>10:10am</ion-note>
